gccida/g3/print_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:572:6: error: conflicting types for 'print_rtx'
int  print_rtx( unsigned __int16 *a1) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:60:13: note: previous declaration is here
static void print_rtx           PARAMS ((rtx));
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:607:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:636:17: error: use of undeclared identifier 'stru_74575F'
( const char *)&stru_74575F._IO_read_end + 7, 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:651:44: error: use of undeclared identifier 'stru_74575F'
result = fprintf( outfile, ( const char *)&stru_74575F._IO_read_base + 6); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:682:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_write_end + 1, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:687:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_write_end + 4, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:692:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_write_end + 7, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:697:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_buf_base + 2, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:702:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_buf_base + 5, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:707:10: error: use of undeclared identifier 'stru_74575F'
fwrite( &stru_74575F._IO_buf_end, 1uLL, 2uLL, outfile); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:711:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_buf_end + 3, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:766:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_read_end + 3, 1uLL, 3uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:773:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._IO_save_end + 6, 1uLL, 2uLL, outfile); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:775:19: error: use of undeclared identifier 'off_698152'
fprintf( outfile, off_698152, *( ( unsigned int *)a1 + 8)); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:791:35: error: use of undeclared identifier 'stru_74575F'
fprintf( outfile, ( const char *)&stru_74575F._markers + 1, *( unsigned int *)( v48 + 88), v9); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:804:17: error: use of undeclared identifier 'stru_74575F'
v55 = ( char *)&stru_74575F._IO_read_ptr + 5; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:806:17: error: use of undeclared identifier 'stru_74575F'
v55 = ( char *)&stru_74575F._IO_read_end + 3; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:812:17: error: use of undeclared identifier 'stru_74575F'
v26 = ( char *)&stru_74575F._IO_buf_end + 6; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/print-rtl.c:816:35: error: use of undeclared identifier 'stru_74575F'
fprintf( outfile, ( const char *)&stru_74575F._IO_backup_base, v25); 
                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_rtx/src/obj/print-rtl.o] Error 1
